# rust-axum-scaffold

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  openapi.json
.github/workflows/: test-artifact.yaml
src/: config.rs  errors.rs  lib.rs  main.rs  server.rs
src/controllers/: health.rs  mod.rs  server.rs  user.rs  user_controller.rs
src/domain/user/: mod.rs  models.rs  view_models.rs
src/repositories/: dynamodb_repository.rs  mod.rs  user_repository.rs
src/services/: mod.rs  service_register.rs  user_service.rs
src/utils/: dynamodb_helpers.rs  mod.rs  openapi_generator.rs
