[package]
name = "rust-axum-scaffold"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
axum = { version = "0.6.19", features = ["macros"] }
futures = "0.3.28"
futures-util = "0.3.28"
clap = { version = "4.3.19", features = ["derive", "env"] }
dotenv = "0.15.0"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.3", features = ["limit", "util"] }
tower-http = { version = "0.4.3", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
