[package]
name = "rust-axum-scaffold"
version = "0.1.0"
edition = "2021"
authors = ["Yong Yu En, Elvis"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = "0.9.0"
clap = { version = "4.3.19", features = ["derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.177", features = ["derive"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+0_28"] }
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.3", features = ["limit", "util"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
